--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,9 @@
   "main": "build/example.bundle.js",
   "module": "build/example.bundle.js",
   "scripts": {
-    "build": "rollup --silent --config rollup.config.js"
+    "build": "rollup --silent --config rollup.config.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o ./build/storybook-static"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,15 @@
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.3.0",
     "rollup": "2.34.2",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.4.0",
